Fix for too wide table breaking the layout

--- a/web-ui/src/main/resources/catalog/views/niedersachsen/less/gn_result_niedersachsen.less
+++ b/web-ui/src/main/resources/catalog/views/niedersachsen/less/gn_result_niedersachsen.less
@@ -45,6 +45,9 @@
           margin-right: 5px;
         }
       }
+      & > table {
+        table-layout: fixed;
+      }
     }
     .table-striped {
       th {
